--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,16 @@
 services:
+    database:
+        image: mysql:8.3
+        container_name: database
+        environment:
+            MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+            MYSQL_USER: ${MYSQL_USER}
+            MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+            MYSQL_DATABASE: ${MYSQL_DBNAME}
+        volumes:
+            - .db:/var/lib/mysql
+        ports:
+            - "3333:3306"
     sio_test:
         user: app
         build:
@@ -9,24 +21,6 @@ services:
             - "8337:8337"
         volumes:
             - .:/app:rw
+            - /app/.db
         environment:
             - APP_ENV=dev
-
-###> doctrine/doctrine-bundle ###
-  database:
-    image: postgres:${POSTGRES_VERSION:-16}-alpine
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB:-app}
-      # You should definitely change the password in production
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-!ChangeMe!}
-      POSTGRES_USER: ${POSTGRES_USER:-app}
-    volumes:
-      - database_data:/var/lib/postgresql/data:rw
-      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
-      # - ./docker/db/data:/var/lib/postgresql/data:rw
-###< doctrine/doctrine-bundle ###
-
-volumes:
-###> doctrine/doctrine-bundle ###
-  database_data:
-###< doctrine/doctrine-bundle ###
