--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ APP_SECRET=a81eb989878f59e668da39cd8693eb9f
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="mysql://user:password@database:3306/application?serverVersion=8.3"
+DATABASE_URL="mysql://user:password@database:3306/application?serverVersion=8.3&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> MYSQL PARAMS ###
